# LAMPS-pBDC

./: HIMACBDCDAQRun_TimeLimit.sh  HIMACDAQStop.sh  README.md  anaAngle.C  anaCorr.C  anaTime.C  bdcAna_DQM9.cc  bdcDrawAll.C  bdcDrawAll_KOMAC.C  bdcTimeDist_Data_v15.C  bdcTrackFinderData_getResolution_v15.C  bdcTrackTreeMaker_Data_v15.C  draw_Resolution.C
20220728_TrackingUpdate_TangentLine/: bdcTimeDist_Data_v16.C  bdcTrackFinderData_CNU_Cosmic_getResolution_v16.C  bdcTrackFinderData_CNU_Cosmic_getResolution_v9.C  bdcTrackTreeMaker_Data_v14.C  draw_Resolution.C  draw_velocity.C
20221212_TrackingUpdate/: HowToRun  anaCorr.C  anaTime.C  bdcOrgTimeDist_Data_v15.C  bdcTimeDist_Data_v15.C  bdcTrackFinderData_CNU_Cosmic_getResolution_v10.C  draw_Resolution.C
20230209_TrackingUpdate_Tangent/: anaAngle.C  anaTimeZero.C  bdcTrackFinderData_CNU_Cosmic_getResolution_v11.C  bdcTrackTreeMaker_Data_v15.C  draw_Resolution.C
20230323_TrackingUpdate_TangentLine_HIMAC/: README  anaAngle.C  anaCorr.C  anaTimeZero.C  bdcOrgTimeDist_Data_v15.C  bdcOrgTimeDist_Data_v15_ori.C  bdcOrgTimeDist_Data_v15_oriC  bdcTimeDist_Data_v15.C  bdcTrackFinderData_CNU_Cosmic_getResolution_v11.C  bdcTrackTreeMaker_Data_v15.C  drawBeamSpot.C  draw_Resolution.C
20230327_AutoHIMACanalysis/: README  anaAngle.C  anaCorr.C  anaTimeWalk.C  anaTimeZero.C  autoBDC.sh  autoCNUCosmic.sh  autoHIMAC.sh  autoHIMACCarbon.sh  autoHIMACCarbon3067v3.sh  autoHIMACCarbonall.sh  drawBeamSpot.C  (+14 more)
BDC_Simulation/BDC_Garfieldpp/: CMakeLists.txt  P10_0_500000.gas  README  bdc_DriftLine.C  bdc_DriftLine2.C  map_fieldMap_BDC.C
(+23 files in other folders)
